# mistral-hackathon-finetuning

./: .envrc  .gitignore  README.md  pyproject.toml
backend/src/: autogen_chat.py  classifier.py  embedding.py  helpers.py  main.py  rag.py  user_proxy_webagent.py
scripts/: backend.py  init-vector-db.py
src/backend/: main.py  rag.py
