[tool.poetry]
name = "lex-bot"
version = "0.1.0"
description = ""
authors = ["Christophe <christophe.alexandre@pm.me>"]
readme = "README.md"
packages = [
    {include = "**/*.py", from="backend/src"}
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
beautifulsoup4 = "^4.12.3"
langchain = "^0.2.16"
langchain-community = "^0.2.16"
mistralai = "^1.0.3"
lxml = "^5.3.0"
uvicorn = "^0.30.6"
chromadb = "^0.5.5"
pyautogen = "^0.3.0"
lightgbm = "^4.5.0"
scikit-learn = "^1.5.1"
fastapi = "^0.114.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
init-vector-db = "scripts.init-vector-db:main"
backend = "scripts.backend:main"
